package ar.edu.unrc.dc.models.entities;
public interface EntityFactory {

    public Entity createProjectile(int row, int col);

}